# loft-opengl

./: .gitignore  CMakeLists.txt
src/: CMakeLists.txt  LOFT.cpp  LOFT.h  NURBS.cpp  NURBS.h  main.cpp  model.cpp  model.h  print_screen.cpp  print_screen.h  six_basic.cpp  six_basic.h
src/base/: camera.cpp  frustum.h  skybox.cpp  texture_cubemap.cpp
